turn on flake8 checks for python/

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           pip install flake8
           flake8 --statistics test/
+          flake8 --statistics python/
 
       - name: Install Basix C++
         run: |
