--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -61,6 +61,11 @@ jobs:
           pip install pytest pytest-xdist numpy sympy numba scipy
           pytest -v -n auto --durations 20 test/
 
+      - name: Build documentation
+        if: runner.os == 'Linux'
+        run: |
+          pip install markdown
+          cd doc && python make_html.py
       - name: Build Python documentation
         if: runner.os == 'Linux'
         run: |
@@ -104,10 +109,13 @@ jobs:
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
           cd docs
+          git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}
           git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}/cpp
           git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}/python
+          mkdir -p basix/${{ env.VERSION_NAME }}
           mkdir -p basix/${{ env.VERSION_NAME }}/cpp
           mkdir -p basix/${{ env.VERSION_NAME }}/python
+          cp -r ../doc/html/* basix/${{ env.VERSION_NAME }}
           cp -r ../cpp/doc/html/* basix/${{ env.VERSION_NAME }}/cpp
           cp -r ../python/doc/build/html/* basix/${{ env.VERSION_NAME }}/python
       - name: Commit and push documentation to FEniCS/docs
