--- a/doc/cpp/header.html.template
+++ b/doc/cpp/header.html.template
@@ -15,9 +15,7 @@ $treeview
 $search
 $mathjax
 <link href="$relpath^$stylesheet" rel="stylesheet" type="text/css" />
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-<link href="{{URL}}/assets/sty.css" rel="stylesheet" type="text/css" />
+{{STYLESHEETS}}
 $extrastylesheet
 </head>
 <body>
