--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -21,6 +21,11 @@ jobs:
   build:
     name: Build and test
     runs-on: ubuntu-20.04
+    container: fenicsproject/test-env:mpich
+
+    defaults:
+      run:
+        shell: bash
 
     strategy:
       matrix:
@@ -32,14 +37,9 @@ jobs:
             c_compiler: icx
             cxx_compiler: icpx    
 
-    defaults:
-      run:
-        shell: bash
-
     env:
       CC: ${{ matrix.c_compiler }}
       CXX: ${{ matrix.cxx_compiler }}
-
 
 
     steps:
