--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -29,9 +29,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - compiler: "Classic"
-            c_compiler: icc
-            cxx_compiler: icpc
+          # - compiler: "Classic"
+          #   c_compiler: icc
+          #   cxx_compiler: icpc
           - compiler: "LLVM-based"
             c_compiler: icx
             cxx_compiler: icpx    
