--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install FEniCS Python components
         run: |
           python3 -m pip install git+https://github.com/FEniCS/ufl.git
-          python3 -m pip install git+https://github.com/FEniCS/ffcx.git@mscroggs/entity-dofs
+          python3 -m pip install git+https://github.com/FEniCS/ffcx.git@mscroggs/entity_dofs
 
       - name: Get DOLFINx
         uses: actions/checkout@v2
