--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -56,7 +56,7 @@ jobs:
       
       - name: Install dependencies (non-Python, Linux)
         run: |
-          sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
+          sudo apt-get install -y ninja-build
 
       - name: Install Intel compilers
         run: |
