--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -75,6 +75,7 @@ jobs:
           cd doc && python make_html.py
 
       - name: Upload C++ documentation artifact
+        if: runner.os == 'Linux'
         uses: actions/upload-artifact@v2
         with:
           name: doc-cpp
@@ -83,6 +84,7 @@ jobs:
           retention-days: 2
           if-no-files-found: error
       - name: Upload Python documentation artifact
+        if: runner.os == 'Linux'
         uses: actions/upload-artifact@v2
         with:
           name: doc-python
