--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ manylinux-x86_64-image = "manylinux2014"
 
 [tool.cibuildwheel.linux]
 before-build = "yum -y update && yum install -y openblas-devel ninja-build"
+environment = { CPATH="/usr/include/openblas" }
 
 [tool.cibuildwheel.macos]
 before-build = "export HOMEBREW_AUTO_UPDATING=0 && brew update && brew install ninja"
