Remove Redhat CI path variable

--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -21,8 +21,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Basix
-        run: |
-          CPATH=/usr/include/openblas python3 -m pip install .[test]
+        run: python3 -m pip install .[test]
 
       - name: Run units tests
         run: |
