--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install Basix
         run: |
-          python3 -m pip -v install .[optional,test]
+          python3 -m pip -v install .[test]
 
       - name: Run units tests
         run: python3 -m pytest -n auto --durations 20 test/
