--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -177,7 +177,7 @@ jobs:
 
       - name: Run units tests
         run: |
-          python3 -m pip install pytest-xdist
+          python3 -m pip install pytest-xdist # in ci extras, but most not needed.
           python3 -m pytest -n auto --durations 20 test/
 
       - name: Run python demos
