--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           . /opt/intel/oneapi/setvars.sh
           export LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so
+          python3 -m pip install pytest-xdist
           python3 -m pytest -n auto --durations 20 test/
 
       - name: Run Python demos
