--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -31,7 +31,9 @@ jobs:
           python3 -m pip -v install .[test]
 
       - name: Run units tests
-        run: python3 -m pytest -n auto --durations 20 test/
+        run: | 
+          python3 -m pip install pytest-xdist
+          python3 -m pytest -n auto --durations 20 test/
 
       - name: Run python demos
         run: python3 -m pytest demo/python/test.py
