--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Run units tests
         run: |
+          python3 -m pip install pytest-xdist
           python3 -m pytest -n auto --durations 20 test/
 
       - name: Run Python demos
