--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          dnf install -y blas-devel cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
+          dnf -y update
+          dnf install -y cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
 
       - uses: actions/checkout@v3
 
