--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           dnf -y update
-          dnf install -y cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
+          dnf install -y blas-devel cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
 
       - uses: actions/checkout@v3
 
