--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Install dependencies
         run: |
           dnf -y update
+          dnf install -y dnf-plugins-core
+          dnf config-manager --set-enabled crb
           dnf install -y blas-devel cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
 
       - uses: actions/checkout@v3
