--- a/demo/cpp/demo_create_and_tabulate/CMakeLists.txt
+++ b/demo/cpp/demo_create_and_tabulate/CMakeLists.txt
@@ -20,4 +20,8 @@ endif()
 find_package(Basix REQUIRED CONFIG HINTS ${BASIX_PY_DIR})
 
 add_executable(${PROJECT_NAME} main.cpp)
+if (BASIX_PY_DIR AND IS_DIRECTORY ${BASIX_PY_DIR}/../fenics_basix.libs)
+    set_target_properties(${PROJECT_NAME} PROPERTIES BUILD_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
+    set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
+endif()
 target_link_libraries(${PROJECT_NAME} Basix::basix)
