--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    if: (github.event.pull_request.head.repo.full_name == github.repository) || github.ref_name == 'main'
     env:
       SONAR_SCANNER_VERSION:
         4.7.0.2747 # Find the latest version at:
