--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-11, macos-12]
+        os: [ubuntu-latest, macos-12, macos-13]
 
     steps:
       - uses: actions/checkout@v3
@@ -54,7 +54,7 @@ jobs:
           platforms: arm64
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.11.1
+        uses: pypa/cibuildwheel@v2.13.0
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -68,12 +68,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.basix_ref }}
+      
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip setuptools
 
-      - name: Install skbuild
-        run: python -m pip install scikit-build
+      - name: Install build
+        run: python -m pip install build
 
       - name: Build sdist
-        run: python setup.py sdist --formats=gztar
+        run: python -m build --sdist .
 
       - uses: actions/upload-artifact@v3
         with:
