--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,35 @@
-[build-system]
-requires = ["setuptools>=42", "wheel", "pybind11>=2.9.1", "cmake>=3.16", "scikit-build>=0.12"]
+[project]
+name = "fenics-basix"
+version = "0.7.0.dev0"
+description = "Basix Python interface"
+readme = "README.md"
+requires-python = ">=3.8.0"
+license = {file = "LICENSE"}
+authors = [{email="fenics-dev@googlegroups.com"}, {name="FEniCS Project"}]
+packages = ["basix"]
+dependencies = ["numpy>=1.21"]
 
-build-backend = "setuptools.build_meta"
+[project.optional-dependencies]
+docs = ["markdown", "pylit3", "pyyaml", "sphinx==5.0.2", "sphinx_rtd_theme"]
+lint = ["flake8", "pydocstyle"]
+optional = ["numba", "fenics-ufl@git+https://github.com/fenics/ufl"]
+test = ["pytest", "sympy", "scipy", "matplotlib", "fenics-basix[optional]"]
+ci = ["mypy", "pytest-xdist", "fenics-basix[docs]", "fenics-basix[lint]",
+      "fenics-basix[optional]", "fenics-basix[test]"]
+
+[tool.pytest.ini_options]
+testpaths = ["test"]
+# addopts = "-n auto --durations 20"
+
+[build-system]
+requires = ["pybind11>=2.9.1", "cmake>=3.19", "scikit-build-core"]
+build-backend = "scikit_build_core.build"
+
+[tool.scikit-build]
+wheel.packages = ["python/basix"]
 
 [tool.cibuildwheel]
-build = ["cp{37,38,39}-manylinux_x86_64", "cp{37,38,39}-manylinux_aarch64", "cp{37,38,39}-macosx_x86_64", "cp{38,39}-macosx_arm64"]
+build = ["cp{38,39,310}-manylinux_x86_64", "cp{38,39,310}-manylinux_aarch64", "cp{38,39,310}-macosx_x86_64", "cp{38,39,310}-macosx_arm64"]
 
 test-command = [
     "cmake -G Ninja -DPython3_EXECUTABLE=$(which python) -B build-dir -S {project}/test/test_cmake",
@@ -16,7 +41,7 @@ test-requires = ["pytest-xdist"]
 test-extras = ["test"]
 test-skip = "*-macosx_arm64 *-*linux_aarch64"
 
-manylinux-x86_64-image = "manylinux2014"
+manylinux-x86_64-image = "manylinux_2_28"
 
 [tool.cibuildwheel.linux]
 archs = ["x86_64", "aarch64"] # Forces arm64 build on x86_64 runner using emulation.
